--- a/package.json
+++ b/package.json
@@ -1,16 +1,26 @@
 {
   "name": "crud",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "next dev"
   },
+
+  "keywords": [],
+  "author": "",
+  "license": "",
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "cookies-next": "^2.1.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
