--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "dev": "next dev"
   },
-
   "keywords": [],
   "author": "",
   "license": "",
@@ -18,7 +17,8 @@
     "jsonwebtoken": "^8.5.1",
     "next": "13.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.7.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
